[Tanvi] Add : UC4-ReverseNum

--- a/LogicalProblems/LogicalProblems.csproj
+++ b/LogicalProblems/LogicalProblems.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Fibonacci.cs" />
+    <Compile Include="PerfectNum.cs" />
+    <Compile Include="PrimeNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
