--- a/LogicalProblems/LogicalProblems.csproj
+++ b/LogicalProblems/LogicalProblems.csproj
@@ -48,6 +48,7 @@
     <Compile Include="PrimeNum.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ReverseNum.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
